css-next/news.css
.news-section .container {
    padding-top: 40px;
    padding-bottom: 40px;
    display: flex;
    justify-content: center;
}

.server-status {
    height: 450px;
    width: 300px;
    display: flex;
    padding: 20px;
    margin: 0 auto;
    flex-flow: column;
    justify-content: flex-start;
    background: rgba(90, 90, 90, 0.1);
}

.server-status div {
    display: flex;
    flex-flow: row;
    width: 100%;
}

.server-status div div {
    padding: 10px;
}

.server-status .text-right {
    justify-content: flex-end;
}

.colorBar {
    top: 10px;
    position: relative;
    height: 0.8em;
    background: -webkit-linear-gradient(left top,
    rgb(231, 82, 57) 0%,
    rgb(231, 82, 57) 50%,
    rgb(4, 156, 219) 50%,
    rgb(4, 156, 219) 100%) repeat scroll 50% 0px transparent;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25) inset;
}

.server-news {
    display: flex;
    flex-flow: column;
    justify-content: flex-start;
    max-width: 900px;
}

.news-item {
    background: rgba(90, 90, 90, 0.1);
    padding: 15px;
    margin: 5px;
}

.news-item:hover {
    background: rgba(90, 90, 90, 0.2);
}

.news-title {
    font-size: 20pt;
    padding: 20px 0;
    background: rgba(90, 90, 90, 0.1);
    margin: 5px;
}

.news-content {
    margin: 5px;
    background: rgba(90, 90, 90, 0.1);
    display: flex;
    flex-flow: row;
    padding: 10px;
}

.news-text {
    padding: 0 10px;
    flex-grow: 5;
    text-align: left;
}

.news-img img {
    width: 100%;
    height: auto;
}

